--- a/index.html
+++ b/index.html
@@ -4,11 +4,61 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Tilt+Neon&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">
 	<title>Document</title>
 </head>
 <body>
-	
+	<div class="container">
+		<aside>
+			<div class="top">
+				<div class="logo">
+					<img src="img/logo.png" alt="">
+					<h2 class="text-muted">EGA<span class="danger">TOR</span></h2>
+				</div>
+				<div class="close" id="close-btn">
+					<span class="material-icons-sharp">close</span>
+				</div>
+			</div>
+			<div class="sidebar">
+				<a href="#">
+					<span class="material-icons-sharp">dashboard_customize</span>
+					<h3>Dashboard</h3>
+				</a>
+				<a href="#" class="active">
+					<span class="material-icons-sharp">person</span>
+					<h3>Customers</h3>
+				</a>
+				<a href="#">
+					<span class="material-icons-sharp">dashboard_customize</span>
+					<h3>Dashboard</h3>
+				</a>
+				<a href="#">
+					<span class="material-icons-sharp">trending_up</span>
+					<h3>Analitics</h3>
+				</a>
+				<a href="#">
+					<span class="material-icons-sharp">email</span>
+					<h3>Message</h3>
+					<span class="message-count">26</span>
+				</a>
+				<a href="#">
+					<span class="material-icons-sharp">report_gmailerrorred</span>
+					<h3>Reposts</h3>
+				</a>
+				<a href="#">
+					<span class="material-icons-sharp">settings_applications</span>
+					<h3>Settings</h3>
+				</a>
+				<a href="#">
+					<span class="material-icons-sharp">logout</span>
+					<h3>Logout</h3>
+				</a>
+			</div>
+		</aside>
+	</div>
 </body>
 </html>
