--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
 	<div class="container">
+		<!-- Aside -->
 		<aside>
 			<div class="top">
 				<div class="logo">
@@ -59,6 +60,132 @@
 				</a>
 			</div>
 		</aside>
+<!-- Aside -->
+
+<!-- Main -->
+<main>
+	<h1>Dashboard</h1>
+	<div class="date">
+		<input type="date">
+	</div>
+	<div class="insights">
+		<div class="sales">
+			<span class="material-icons-sharp">analytics</span>
+			<div class="middle">
+				<div class="left">
+					<h3>Total Sales</h3>
+					<h1>$25,024</h1>
+				</div>
+				<div class="progress">
+					<svg>
+						<circle cx='38' cy='38' r='36'></circle>
+					</svg>
+					<div class="number">
+						<p>
+							81%
+						</p>
+					</div>
+				</div>
+			</div>
+			<small class="text-muted">Last 24 Hours</small>
+		</div>
+
+		<div class="expenses">
+			<span class="material-icons-sharp">bar_chart</span>
+			<div class="middle">
+				<div class="left">
+					<h3>Total Expenses</h3>
+					<h1>$14,160</h1>
+				</div>
+				<div class="progress">
+					<svg>
+						<circle cx='38' cy='38' r='36'></circle>
+					</svg>
+					<div class="number">
+						<p>
+							62%
+						</p>
+					</div>
+				</div>
+			</div>
+			<small class="text-muted">Last 24 Hours</small>
+		</div>
+
+		<div class="income">
+			<span class="material-icons-sharp">stacked_line_chart</span>
+			<div class="middle">
+				<div class="left">
+					<h3>Total Income</h3>
+					<h1>$10,864</h1>
+				</div>
+				<div class="progress">
+					<svg>
+						<circle cx='38' cy='38' r='36'></circle>
+					</svg>
+					<div class="number">
+						<p>
+							44%
+						</p>
+					</div>
+				</div>
+			</div>
+			<small class="text-muted">Last 24 Hours</small>
+		</div>
+	</div>
+
+	<div class="recent-orders">
+		<h2>Recent Order</h2>
+		<table>
+			<thead>
+				<tr>
+					<th>Product Name</th>
+					<th>Product Number</th>
+					<th>Payment</th>
+					<th>Status</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>Foldable Mini Drone</td>
+					<td>85631</td>
+					<td>Due</td>
+					<td class="warning">Pending</td>
+					<td class="primary">Detalies</td>
+				</tr>
+				<tr>
+					<td>Foldable Mini Drone</td>
+					<td>85631</td>
+					<td>Due</td>
+					<td class="warning">Pending</td>
+					<td class="primary">Detalies</td>
+				</tr>
+				<tr>
+					<td>Foldable Mini Drone</td>
+					<td>85631</td>
+					<td>Due</td>
+					<td class="warning">Pending</td>
+					<td class="primary">Detalies</td>
+				</tr>
+				<tr>
+					<td>Foldable Mini Drone</td>
+					<td>85631</td>
+					<td>Due</td>
+					<td class="warning">Pending</td>
+					<td class="primary">Detalies</td>
+				</tr>
+				<tr>
+					<td>Foldable Mini Drone</td>
+					<td>85631</td>
+					<td>Due</td>
+					<td class="warning">Pending</td>
+					<td class="primary">Detalies</td>
+				</tr>
+			</tbody>
+		</table>
+		<a href="#">Show All</a>
+	</div>
+</main>
+<!-- Main -->
 	</div>
 </body>
 </html>
