--- a/index.html
+++ b/index.html
@@ -153,31 +153,31 @@
 					<td class="primary">Detalies</td>
 				</tr>
 				<tr>
-					<td>Foldable Mini Drone</td>
-					<td>85631</td>
+					<td>LARVENDER KF102 Drone</td>
+					<td>36378</td>
+					<td>Refunded</td>
+					<td class="warning">Declined</td>
+					<td class="primary">Detalies</td>
+				</tr>
+				<tr>
+					<td>Ruko F11 Pro Drone</td>
+					<td>49347</td>
 					<td>Due</td>
 					<td class="warning">Pending</td>
 					<td class="primary">Detalies</td>
 				</tr>
 				<tr>
-					<td>Foldable Mini Drone</td>
-					<td>85631</td>
-					<td>Due</td>
-					<td class="warning">Pending</td>
+					<td>Done with Camera Drone</td>
+					<td>96996</td>
+					<td>Paid</td>
+					<td class="warning">Declined</td>
 					<td class="primary">Detalies</td>
 				</tr>
 				<tr>
-					<td>Foldable Mini Drone</td>
-					<td>85631</td>
-					<td>Due</td>
-					<td class="warning">Pending</td>
-					<td class="primary">Detalies</td>
-				</tr>
-				<tr>
-					<td>Foldable Mini Drone</td>
-					<td>85631</td>
-					<td>Due</td>
-					<td class="warning">Pending</td>
+					<td>GPS 4k Drone</td>
+					<td>22821</td>
+					<td>Paid</td>
+					<td class="warning">Declined</td>
 					<td class="primary">Detalies</td>
 				</tr>
 			</tbody>
@@ -186,6 +186,129 @@
 	</div>
 </main>
 <!-- Main -->
+
+<div class="right">
+	<div class="top">
+		<button id="menu-btn">
+			<span class="material-icons-sharp">menu</span>
+		</button>
+		<div class="theme-toggler">
+			<span class="material-icons-sharp active">light_mode</span>
+			<span class="material-icons-sharp">dark_mode</span>
+		</div>
+		<div class="profile">
+			<div class="info">
+				<p>
+					Hey
+					<b>
+						Daniel
+					</b>
+				</p>
+				<small  class="text-muted">Admin</small>
+			</div>
+			<div class="profile-photo">
+				<img src="img/profile-1.jpg" alt="">
+			</div>
+		</div>
 	</div>
+
+		<div class="recent-updates">
+			<h2>Recent Updates</h2>
+			<div class="updates">
+				<div class="update">
+					<div class="profile-photo">
+					<img src="img/profile-2.jpg" alt="">
+				</div>
+				<div class="message">
+					<p>
+						<b>
+							Mike Tyson
+						</b>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam quia incidunt harum est, laborum expedita ducimus, mollitia itaque pariatur quas assumenda odit maiores? Ipsum voluptatem, odit aliquid quam libero molestiae.
+					</p>
+					<small class="text-muted">2 Minutes Ago</small>
+				</div>
+			</div>
+				<div class="update">
+					<div class="profile-photo">
+					<img src="img/profile-3.jpg" alt="">
+				</div>
+				<div class="message">
+					<p>
+						<b>
+							Mike Tyson
+						</b>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam quia incidunt harum est, laborum expedita ducimus, mollitia itaque pariatur quas assumenda odit maiores? Ipsum voluptatem, odit aliquid quam libero molestiae.
+					</p>
+					<small class="text-muted">2 Minutes Ago</small>
+				</div>
+			</div>
+				<div class="update">
+					<div class="profile-photo">
+					<img src="img/profile-4.jpg" alt="">
+				</div>
+				<div class="message">
+					<p>
+						<b>
+							Mike Tyson
+						</b>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam quia incidunt harum est, laborum expedita ducimus, mollitia itaque pariatur quas assumenda odit maiores? Ipsum voluptatem, odit aliquid quam libero molestiae.
+					</p>
+					<small class="text-muted">2 Minutes Ago</small>
+				</div>
+			</div>
+		</div>
+		</div>
+
+		<div class="sales-analitics">
+			<h2>Sales Analitics</h2>
+			<div class="item online">
+				<div class="icon">
+					<span class="material-icons-sharp">shopping_cart</span>
+				</div>
+				<div class="right">
+					<div class="info">
+						<h3>ONLINE ORDERS</h3>
+						<small class="text-muted">Last 24 Hours</small>
+					</div>
+					<h5 class="success">+39%</h5>
+					<h3>3849</h3>
+				</div>
+			</div>
+			<div class="item offline">
+				<div class="icon">
+					<span class="material-icons-sharp">local_mall</span>
+				</div>
+				<div class="right">
+					<div class="info">
+						<h3>OFFLINE ORDERS</h3>
+						<small class="text-muted">Last 24 Hours</small>
+					</div>
+					<h5 class="danger">-17%</h5>
+					<h3>1100</h3>
+				</div>
+			</div>
+			<div class="item customers">
+				<div class="icon">
+					<span class="material-icons-sharp">person</span>
+				</div>
+				<div class="right">
+					<div class="info">
+						<h3>NEW CUSTOMERS</h3>
+						<small class="text-muted">Last 24 Hours</small>
+					</div>
+					<h5 class="success">+25%</h5>
+					<h3>849</h3>
+				</div>
+			</div>
+			<div class="item add-product">
+				<div>
+					<span class="material-icons-sharp">add</span>
+					<h3>Add Product</h3>
+				</div>
+			</div>
+		</div>
+		</div>
+</div>
 </body>
 </html>
