--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Tilt+Neon&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">
-	<title>Document</title>
+	<link rel="shortcut icon" type="image" href="img/browser.svg">
+	<title>Responsive Admin Dashboard</title>
 </head>
 <body>
 	<div class="container">
